--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^3.11.0",
     "react-scripts": "4.0.1",
+    "react-typed": "^1.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
